# emm

./: .clang-format  .gitignore  AST.h  BaseASTNode.h  CMakeLists.txt  CPPHelpers.h  CallExprAST.h  Compilation.h  Function.h  Lexer.h  Logging.h  Mangling.h  OptimizationPasses.h  Parser.h  README.md  Token.h  Type.h  TypeRegistry.h  Types.h  Value.h  Variable.h  ast.h  base_ast_node.h  call_expr_ast.h  clang_format.sh  cpp_helpers.h  function.h  lexer.h  logging.h  main.cpp  mangling.h  optimization_passes.h  parser.h  token.h  type.h  type_registry.h  types.h  value.h  variable.h
AST/: AST.h  BaseASTNode.h  CallExprAST.h
Basic/: CPPHelpers.h  EnumMagic.h  Logging.h
Lex/: Lexer.h  RawLexer.h  Token.h  TokenTypes.h
Parse/: Parser.h
examples/: codegen.emm  dereferencing.emm  example.emm  extern.cpp  extern.emm  malloc.emm  member_functions.emm  more_types.emm  operator_overloading.emm  pointers.emm  string_implementation.emm  strings.emm  structs.emm  trivial_codegen.emm  trivial_example.emm  types.emm  variables.emm
